files spacing fixed

--- a/src/app/home-view/home-view.component.css
+++ b/src/app/home-view/home-view.component.css
@@ -4,7 +4,6 @@
 }
 
 .box1 {
-  flex: 0 0 200px;
   height: 100%;
   text-align: center;
 }
